Setup `application.yml` with credentials provided by Paypal Developer Dashboard

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,4 @@
-spring.application.name=paypal-integration
+paypal:
+  client-id: <client_id>
+  client-secret: <client_secret>
+  mode: sandbox # `sandbox` for testing and `live` for Production
